--- a/app/src/main/res/drawable/ic_settings.xml
+++ b/app/src/main/res/drawable/ic_settings.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="30dp"
     android:height="30dp"
-    android:tint="?attr/colorPrimary"
+    android:tint="?attr/colorPrimaryVariant"
     android:viewportWidth="300"
     android:viewportHeight="300">
   <path
