--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?attr/colorPrimaryVariant"
     android:padding="15dp"
     tools:context=".MainActivity">
 
@@ -105,18 +106,18 @@
                 android:textSize="20sp"
                 app:cornerRadius="35dp" />
 
-                <Button
-                    android:id="@+id/buttonOn"
-                    android:layout_width="match_parent"
-                    android:layout_height="70dp"
-                    android:layout_marginVertical="3dp"
-                    android:insetLeft="6dp"
-                    android:insetRight="6dp"
-                    android:onClick="onClick"
-                    android:text="Включить"
-                    android:textAllCaps="false"
-                    android:textSize="20sp"
-                    app:cornerRadius="35dp" />
+            <Button
+                android:id="@+id/buttonOn"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginVertical="3dp"
+                android:insetLeft="6dp"
+                android:insetRight="6dp"
+                android:onClick="onClick"
+                android:text="Включить"
+                android:textAllCaps="false"
+                android:textSize="20sp"
+                app:cornerRadius="35dp" />
 
         </LinearLayout>
 
