--- a/app/src/main/res/layout/confirm_dialog.xml
+++ b/app/src/main/res/layout/confirm_dialog.xml
@@ -20,7 +20,7 @@
             android:gravity="center_horizontal"
             android:padding="10dp"
             android:text="йцу"
-            android:textColor="?attr/colorOnSecondary"
+            android:textColor="@color/black"
             android:textSize="32sp"
             android:textStyle="bold" />
 
@@ -31,8 +31,8 @@
             android:layout_marginVertical="3dp"
             android:insetLeft="6dp"
             android:insetRight="6dp"
-            android:backgroundTint="?attr/colorOnSecondary"
-            android:textColor="?attr/colorSecondaryVariant"
+            android:backgroundTint="@color/black"
+            android:textColor="@color/white"
             android:text="Подтвердить"
             android:textAllCaps="false"
             android:textSize="20sp"
@@ -44,8 +44,8 @@
             android:layout_height="70dp"
             android:layout_marginVertical="3dp"
             android:insetLeft="6dp"
-            android:backgroundTint="?attr/colorOnSecondary"
-            android:textColor="?attr/colorSecondaryVariant"
+            android:backgroundTint="@color/black"
+            android:textColor="@color/white"
             android:insetRight="6dp"
             android:text="Отмена"
             android:textAllCaps="false"
