--- a/app/src/main/res/layout/edit_pref_dialog.xml
+++ b/app/src/main/res/layout/edit_pref_dialog.xml
@@ -20,7 +20,7 @@
             android:gravity="center_horizontal"
             android:padding="10dp"
             android:text="Введите MAC-адрес выключаемого компьютера"
-            android:textColor="?attr/colorOnSecondary"
+            android:textColor="@color/black"
             android:textSize="32sp"
             android:textStyle="bold" />
 
@@ -44,12 +44,12 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_marginVertical="3dp"
-            android:backgroundTint="?attr/colorOnSecondary"
+            android:backgroundTint="@color/black"
             android:insetLeft="6dp"
             android:insetRight="6dp"
             android:text="Сохранить"
             android:textAllCaps="false"
-            android:textColor="?attr/colorSecondaryVariant"
+            android:textColor="@color/white"
             android:textSize="20sp"
             app:cornerRadius="35dp" />
 
@@ -58,12 +58,12 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_marginVertical="3dp"
+            android:backgroundTint="@color/black"
             android:insetLeft="6dp"
-            android:backgroundTint="?attr/colorOnSecondary"
-            android:textColor="?attr/colorSecondaryVariant"
             android:insetRight="6dp"
             android:text="Отмена"
             android:textAllCaps="false"
+            android:textColor="@color/white"
             android:textSize="20sp"
             app:cornerRadius="35dp" />
 
