- updates and fixes

--- a/app/src/main/res/layout/edit_pref_dialog.xml
+++ b/app/src/main/res/layout/edit_pref_dialog.xml
@@ -19,7 +19,7 @@
             android:layout_marginBottom="35dp"
             android:gravity="center_horizontal"
             android:padding="10dp"
-            android:text="Введите MAC-адрес выключаемого компьютера"
+            android:text="Введите MAC-адрес включаемого компьютера"
             android:textColor="@color/black"
             android:textSize="32sp"
             android:textStyle="bold" />
