--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -122,7 +122,8 @@
                 android:id="@+id/buttonOn"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
-                android:layout_marginVertical="3dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="50dp"
                 android:gravity="center_vertical"
                 android:insetLeft="6dp"
                 android:insetRight="6dp"
