--- a/app/src/main/res/layout/edit_pref_dialog.xml
+++ b/app/src/main/res/layout/edit_pref_dialog.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:gravity="center"
+    android:orientation="vertical"
+    android:padding="21dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,7 +20,7 @@
             android:layout_marginBottom="35dp"
             android:gravity="center_horizontal"
             android:padding="10dp"
-            android:text="Введите MAC-адрес включаемого компьютера"
+            android:text="MAC-адрес включаемого компьютера"
             android:textColor="@color/black"
             android:textSize="32sp"
             android:textStyle="bold" />
